test ok. need to handle error json and verify paramaters.

--- a/src/test/javascript/common/list-test.html
+++ b/src/test/javascript/common/list-test.html
@@ -17,26 +17,6 @@
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture">
-		<table id="fixed-table">
-			<thead>
-				<tr>
-					<th>ID</th>
-					<th>Delete</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>#2</td>
-					<td>Delete</td>
-				</tr>
-				<tr>
-					<td>#2</td>
-					<td>Delete</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	<div>
 		<table id="table">
 			<thead>
 				<tr>
@@ -53,6 +33,22 @@
 				<tr>
 					<td><span class="list-item-id list-item-label">2</span></td>
 					<td><a id="delete-link-2" class="link-remove" href="#">Delete</a></td>
+				</tr>
+				<tr>
+					<td><span class="list-item-id list-item-label">3</span></td>
+					<td><a id="delete-link-3" class="link-remove" href="#">Delete</a></td>
+				</tr>
+				<tr>
+					<td><span class="list-item-id list-item-label">4</span></td>
+					<td><a id="delete-link-4" class="link-remove" href="#">Delete</a></td>
+				</tr>
+				<tr>
+					<td><span class="list-item-id list-item-label">5</span></td>
+					<td><a id="delete-link-5" class="link-remove" href="#">Delete</a></td>
+				</tr>
+				<tr>
+					<td><span class="list-item-id list-item-label">6</span></td>
+					<td><a id="delete-link-6" class="link-remove" href="#">Delete</a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -74,6 +70,7 @@
 				id="form-delete-id" />
 		</form>
 	</div>
+
 	<script type="text/javascript"
 		src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
 	<script type="text/javascript"
