--- a/src/test/javascript/common/validator-test.html
+++ b/src/test/javascript/common/validator-test.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8">
 <title>QUnit js/common/validator.js</title>
 <link rel="stylesheet"
+	href="http://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/css/bootstrap.min.css" />
+<link rel="stylesheet"
+	href="http://cdn.jsdelivr.net/webjars/bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css" />
+<link rel="stylesheet"
 	href="https://code.jquery.com/qunit/qunit-1.15.0.css" />
 </head>
 <body>
@@ -11,15 +15,93 @@
 	<div id="qunit-fixture">
 		<div class="forms">
 			<div class="section-form-1">
-				<form id="form-1"></form>
+				<form id="form-1" class="not-bv-form"></form>
+			</div>
+			<div class="section-form-2">
+				<form id="form-2" method="post" action="#" action="#"
+					class="form-horizontal bv-form" role="form">
+					<div class="form-group form-group-sm">
+						<label for="username" class="col-sm-4 control-label">?username?</label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control bv-input" name="username"
+								id="username" />
+							<div class="hidden">
+								<div class="validators">
+									<div class="notEmpty">
+										<div class="message">?required</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="form-group form-group-sm">
+						<label for="fullname" class="col-sm-4 control-label">?name?</label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control bv-input" name="fullname"
+								id="fullname" />
+							<div class="hidden">
+								<div class="validators">
+									<div class="notEmpty">
+										<div class="message">required</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="form-group form-group-sm">
+						<label for="password" class="col-sm-4 control-label">?password?</label>
+						<div class="col-sm-8">
+							<input type="password" class="form-control bv-input"
+								name="password" id="password" />
+							<div class="hidden">
+								<div class="validators">
+									<div class="notEmpty">
+										<div class="message">?required?</div>
+									</div>
+									<div class="identical">
+										<div class="field">confirmPassword</div>
+										<div class="message">Not same as confirmPassword</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="form-group form-group-sm">
+						<label for="confirmPassword" class="col-sm-4 control-label">?confirm?</label>
+						<div class="col-sm-8">
+							<input type="password" class="form-control bv-input"
+								name="confirmPassword" id="confirmPassword" />
+							<div class="hidden">
+								<div class="validators">
+									<div class="notEmpty">
+										<div class="message">?required?</div>
+									</div>
+									<div class="identical">
+										<div class="field">password</div>
+										<div class="message">?Not same as password?</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-8 col-sm-offset-4">
+							<button type="submit" class="btn btn-primary btn-block">?save?</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
 
 	<script type="text/javascript"
-		src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
-	<script type="text/javascript"
 		src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.js"></script>
+	<script type="text/javascript"
+		src="http://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript"
+		src="http://cdn.jsdelivr.net/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
+	<script type="text/javascript"
+		src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
 	<script type="text/javascript"
 		src="http://sinonjs.org/releases/sinon-1.10.3.js"></script>
 	<script type="text/javascript"
