--- a/src/test/javascript/common/validator-test.html
+++ b/src/test/javascript/common/validator-test.html
@@ -95,17 +95,17 @@
 	</div>
 
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
 	<script type="text/javascript"
-		src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
+		src="https://code.jquery.com/qunit/qunit-1.15.0.js"></script>
 	<script type="text/javascript"
-		src="http://sinonjs.org/releases/sinon-1.10.3.js"></script>
+		src="https://sinonjs.org/releases/sinon-1.10.3.js"></script>
 	<script type="text/javascript"
-		src="http://sinonjs.org/releases/sinon-qunit-1.0.0.js"></script>
+		src="https://sinonjs.org/releases/sinon-qunit-1.0.0.js"></script>
 	<script type="text/javascript"
 		src="../../../main/webapp/resources/js/common/validator.js"></script>
 	<script type="text/javascript" src="validator-test.js"></script>
