--- a/src/test/javascript/common/list-test.html
+++ b/src/test/javascript/common/list-test.html
@@ -85,21 +85,21 @@
 	</div>
 
 	<script type="text/javascript"
-		src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
+		src="https://code.jquery.com/qunit/qunit-1.15.0.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/jquery-ui/1.11.0/jquery-ui.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/jquery-ui/1.11.0/jquery-ui.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/datatables/1.10.2/js/jquery.dataTables.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/datatables/1.10.2/js/jquery.dataTables.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/hoganjs/3.0.2/hogan.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/hoganjs/3.0.2/hogan.js"></script>
 	<script type="text/javascript"
-		src="http://cdn.jsdelivr.net/webjars/jquery-form/3.28.0-2013.02.06-3/jquery.form.js"></script>
+		src="https://cdn.jsdelivr.net/webjars/jquery-form/3.28.0-2013.02.06-3/jquery.form.js"></script>
 	<script type="text/javascript"
-		src="http://sinonjs.org/releases/sinon-1.10.3.js"></script>
+		src="https://sinonjs.org/releases/sinon-1.10.3.js"></script>
 	<script type="text/javascript"
-		src="http://sinonjs.org/releases/sinon-qunit-1.0.0.js"></script>
+		src="https://sinonjs.org/releases/sinon-qunit-1.0.0.js"></script>
 	<script type="text/javascript"
 		src="../../../main/webapp/resources/js/common/list.js"></script>
 	<script type="text/javascript" src="list-test.js"></script>
