--- a/src/test/javascript/common/list-test.html
+++ b/src/test/javascript/common/list-test.html
@@ -84,8 +84,11 @@
 
 	</div>
 
-	<script type="text/javascript"
-		src="https://code.jquery.com/qunit/qunit-1.15.0.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.15.0/qunit.js"
+		integrity="sha512-VF+Yqc8IbEJxQ7J+yg61rkm/2f+vcf5MDZuwl8/Yqf5EiWqIAMoC89e/ot2GiPTnJNg1K0ym2/vVRnBX6X515g=="
+		crossorigin="anonymous"
+		referrerpolicy="no-referrer">
+        </script>
 	<script type="text/javascript"
 		src="https://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.js"></script>
 	<script type="text/javascript"
