--- a/src/test/javascript/common/validator-test.html
+++ b/src/test/javascript/common/validator-test.html
@@ -101,7 +101,9 @@
 	<script type="text/javascript"
 		src="https://cdn.jsdelivr.net/webjars/bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
 	<script type="text/javascript"
-		src="https://code.jquery.com/qunit/qunit-1.15.0.js"></script>
+		src="https://code.jquery.com/qunit/qunit-1.15.0.js"
+		integrity="sha512-VF+Yqc8IbEJxQ7J+yg61rkm/2f+vcf5MDZuwl8/Yqf5EiWqIAMoC89e/ot2GiPTnJNg1K0ym2/vVRnBX6X515g==">
+	</script>
 	<script type="text/javascript"
 		src="https://sinonjs.org/releases/sinon-1.10.3.js"></script>
 	<script type="text/javascript"
